--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
   <meta charset="UTF-8">
@@ -8,8 +8,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/quill-cursors/2.2.1/quill-cursors.min.css">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet">
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="styles.css">
 
   <style>
     #editor-container {
@@ -53,28 +62,158 @@
       visibility: visible !important;
       display: block !important;
     }
+
+    /* Demo Cards */
+    .demo-card {
+      cursor: pointer;
+      transition: all 0.3s ease;
+      border: 2px solid transparent;
+      background: linear-gradient(135deg, var(--bs-body-bg) 0%, var(--bs-secondary-bg) 100%);
+    }
+
+    .demo-card:hover {
+      transform: translateY(-4px);
+      border-color: var(--bs-primary);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .demo-card.active {
+      border-color: var(--bs-success);
+      background: linear-gradient(135deg, var(--bs-success-bg-subtle) 0%, var(--bs-primary-bg-subtle) 100%);
+    }
+
+    /* Agent Activity Panel */
+    .agent-item {
+      border-left: 4px solid;
+      transition: all 0.3s ease;
+      animation: slideIn 0.3s ease;
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    .agent-item.working {
+      animation: pulse 2s ease-in-out infinite;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        opacity: 1;
+      }
+
+      50% {
+        opacity: 0.7;
+      }
+    }
+
+    .agent-status-dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 8px;
+      animation: blink 1.5s ease-in-out infinite;
+    }
+
+    @keyframes blink {
+
+      0%,
+      100% {
+        opacity: 1;
+      }
+
+      50% {
+        opacity: 0.3;
+      }
+    }
+
+    /* Sample Prompts */
+    .sample-prompt {
+      cursor: pointer;
+      transition: all 0.2s ease;
+      border-left: 3px solid var(--bs-primary);
+    }
+
+    .sample-prompt:hover {
+      background-color: var(--bs-primary-bg-subtle);
+      border-left-width: 5px;
+      transform: translateX(5px);
+    }
+
+    /* Highlight sections being edited */
+    .agent-highlight {
+      background-color: rgba(255, 235, 59, 0.2);
+      border-left: 4px solid;
+      padding-left: 8px;
+      transition: all 0.3s ease;
+    }
   </style>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href=".">Parallel Editing Demo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="ms-auto d-flex align-items-center gap-3">
+          <span class="badge bg-secondary-subtle text-body border"><i class="bi bi-people-fill"></i> <span
+              id="user-count">1</span></span>
+          <button id="btn-share" class="btn btn-sm btn-outline-primary"><i class="bi bi-share-fill"></i> Share</button>
+          <button class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#llmConfigModal"><i
+              class="bi bi-gear-fill"></i> Config</button>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom px-3">
-    <a class="navbar-brand" href="#">Contract<span class="text-primary fw-bold">AI</span></a>
-    <div class="ms-auto d-flex align-items-center gap-3">
-      <span class="badge bg-secondary-subtle text-body border"><i class="bi bi-people-fill"></i> <span
-          id="user-count">1</span></span>
-      <button id="btn-share" class="btn btn-sm btn-outline-primary"><i class="bi bi-share-fill"></i> Share</button>
-      <button class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#llmConfigModal"><i
-          class="bi bi-gear-fill"></i></button>
+          <div class="nav-item dropdown" role="group">
+            <button class="dark-theme-toggle btn btn-outline-secondary btn-sm dropdown-toggle" type="button"
+              data-bs-toggle="dropdown">
+              <i class="bi bi-circle-half"></i>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><button class="dropdown-item active" data-bs-theme-value="light"><i class="me-2 bi bi-sun-fill"></i>
+                  Light</button></li>
+              <li><button class="dropdown-item" data-bs-theme-value="dark"><i class="me-2 bi bi-moon-stars-fill"></i>
+                  Dark</button></li>
+              <li><button class="dropdown-item" data-bs-theme-value="auto"><i class="me-2 bi bi-circle-half"></i>
+                  Auto</button></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </nav>
 
-  <div class="container-fluid mt-4">
+  <div id="main-app" class="container-fluid mt-3">
+    <!-- Demo Scenario Cards -->
+    <div class="row mb-3">
+      <div class="col-12">
+        <div class="d-flex justify-content-between align-items-center mb-2">
+          <h6 class="text-muted mb-0"><i class="bi bi-stars me-2"></i>Demo Scenarios</h6>
+          <small class="text-muted">Click a scenario to load its document</small>
+        </div>
+        <div class="row g-3" id="demo-cards-container">
+          <!-- Demo cards will be dynamically inserted here -->
+        </div>
+      </div>
+    </div>
+
     <div class="row g-4">
-      <div class="col-lg-9">
+      <div class="col-lg-7">
         <div class="card shadow-sm h-100">
-          <div class="card-header d-flex justify-content-between">
-            <span class="fw-bold">Agreement.docx</span>
+          <div class="card-header d-flex justify-content-between align-items-center">
+            <span class="fw-bold" id="document-title">Agreement.docx</span>
             <div>
               <button class="btn btn-sm btn-outline-secondary template-btn" data-template="MSA">MSA</button>
               <button class="btn btn-sm btn-outline-secondary template-btn" data-template="NDA">NDA</button>
@@ -84,16 +223,70 @@
         </div>
       </div>
 
-      <div class="col-lg-3">
-        <div class="card shadow-sm h-100 border-0 bg-body-tertiary">
-          <div class="card-header bg-primary text-white"><i class="bi bi-robot me-2"></i>AI Co-Pilot</div>
-          <div class="card-body d-flex flex-column gap-3">
-            <textarea id="custom-prompt" class="form-control" rows="3"
-              placeholder="e.g. Add a liability cap of $50k"></textarea>
-            <button id="btn-trigger" class="btn btn-primary btn-sm">Draft / Edit</button>
-            <div id="ai-status" class="badge bg-secondary d-none">Thinking...</div>
-            <hr>
-            <div id="logs" class="small font-monospace text-muted" style="height: 200px; overflow-y: auto;"></div>
+      <div class="col-lg-5">
+        <div class="row g-3 h-100">
+          <!-- AI Co-Pilot Panel -->
+          <div class="col-12">
+            <div class="card shadow-sm border-0 bg-body-tertiary">
+              <div class="card-header bg-primary text-white">
+                <i class="bi bi-robot me-2"></i>AI Co-Pilot
+              </div>
+              <div class="card-body">
+                <textarea id="custom-prompt" class="form-control mb-2" rows="2"
+                  placeholder="e.g. Add a liability cap of $50k"></textarea>
+                <button id="btn-trigger" class="btn btn-primary btn-sm w-100 mb-2">
+                  <i class="bi bi-play-fill me-1"></i>Draft / Edit
+                </button>
+                <div id="ai-status" class="badge bg-secondary d-none mb-2">Thinking...</div>
+
+                <!-- Sample Prompts Section -->
+                <div id="sample-prompts-container" class="mt-3">
+                  <!-- Sample prompts will be dynamically inserted here -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Multi-Agent Activity Panel -->
+          <div class="col-12">
+            <!-- Parent Agent Status -->
+            <div class="card shadow-sm border-0 bg-body-tertiary mb-3" id="parent-agent-card" style="display: none;">
+              <div class="card-header bg-warning text-white d-flex justify-content-between align-items-center">
+                <span><i class="bi bi-stars me-2"></i>Parent Agent (Supervisor)</span>
+                <span class="badge bg-light text-dark" id="parent-status">Planning</span>
+              </div>
+              <div class="card-body p-2">
+                <div id="parent-agent-info" class="small text-white">
+                  <div class="mb-1"><strong>Role:</strong> Coordinating team and ensuring quality</div>
+                  <div id="parent-analysis" class="text-muted"></div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Child Agents Activity -->
+            <div class="card shadow-sm border-0 bg-body-tertiary">
+              <div class="card-header bg-success text-white d-flex justify-content-between align-items-center">
+                <span><i class="bi bi-diagram-3 me-2"></i>Agent Activity</span>
+                <span class="badge bg-light text-dark" id="active-agents-count">0 Active</span>
+              </div>
+              <div class="card-body p-0">
+                <div id="agent-activity-container" class="p-3" style="max-height: 300px; overflow-y: auto;">
+                  <p class="text-muted text-center small mb-0">No agents currently working</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Logs Panel -->
+          <div class="col-12">
+            <div class="card shadow-sm border-0 bg-body-tertiary">
+              <div class="card-header bg-secondary text-white">
+                <i class="bi bi-terminal me-2"></i>Activity Log
+              </div>
+              <div class="card-body p-2">
+                <div id="logs" class="small font-monospace text-muted" style="height: 150px; overflow-y: auto;"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -146,6 +339,7 @@
   }
 }
 </script>
+  <script src="https://cdn.jsdelivr.net/npm/@gramex/ui@0.3.1/dist/dark-theme.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="script.js"></script>
 </body>
