--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contract AI Collab</title>
+  <title>Parallel Editing</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
@@ -162,22 +162,35 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-secondary shadow-sm">
     <div class="container-fluid">
-      <a class="navbar-brand" href=".">Parallel Editing Demo</a>
+      <a class="navbar-brand d-flex align-items-center gap-2" href=".">
+        <span class="fw-bold">Parallel Edit</span>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center gap-3">
+          <div
+            class="d-flex align-items-center rounded bg-secondary bg-opacity-25 px-3 py-1 text-light border border-secondary">
+            <span id="connection-status-dot" class="d-inline-block rounded-circle bg-warning me-2"
+              style="width: 8px; height: 8px;"></span>
+            <span id="connection-status-text" class="small">Connecting...</span>
+          </div>
+        </div>
+
         <div class="ms-auto d-flex align-items-center gap-3">
-          <span class="badge bg-secondary-subtle text-body border"><i class="bi bi-people-fill"></i> <span
+          <span class="badge bg-dark border border-secondary text-light"><i class="bi bi-people-fill me-1"></i> <span
               id="user-count">1</span></span>
-          <button id="btn-share" class="btn btn-sm btn-outline-primary"><i class="bi bi-share-fill"></i> Share</button>
-          <button class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#llmConfigModal"><i
+          <button id="btn-new-session" class="btn btn-sm btn-outline-success"><i class="bi bi-plus-lg"></i> New
+            Session</button>
+          <button id="btn-share" class="btn btn-sm btn-outline-light"><i class="bi bi-share-fill"></i> Share</button>
+          <button class="btn btn-sm btn-outline-light" data-bs-toggle="modal" data-bs-target="#llmConfigModal"><i
               class="bi bi-gear-fill"></i> Config</button>
 
           <div class="nav-item dropdown" role="group">
-            <button class="dark-theme-toggle btn btn-outline-secondary btn-sm dropdown-toggle" type="button"
+            <button class="dark-theme-toggle btn btn-outline-secondary btn-sm dropdown-toggle text-light" type="button"
               data-bs-toggle="dropdown">
               <i class="bi bi-circle-half"></i>
             </button>
@@ -195,28 +208,69 @@
     </div>
   </nav>
 
-  <div id="main-app" class="container-fluid mt-3">
-    <!-- Demo Scenario Cards -->
+  <div id="main-app" class="container-fluid mt-4">
+    <!-- Hero / Intro Section -->
+    <div id="hero-section" class="container text-center mt-2">
+      <h1 class="display-3 my-2 text-center">Parallel Edit</h1>
+
+      <h2 class="display-6 text-center">
+        Collaborative Intelligence for <em>Complex</em> Documents
+      </h2>
+
+      <div class="mx-auto my-2 narrative">
+        <p class="mb-2 mt-2">
+          Experience the future of collaborative writing. Parallel Edit allows you to work alongside a hive-mind of
+          specialized AI agents.
+        </p>
+        <ul class="mb-0 text-start d-inline-block">
+          <li>Start with real-time multi-agent collaboration that never sleeps.</li>
+          <li><em>Configure your AI team</em> to verify facts, fix style, and draft content.</li>
+          <li>Work without conflicts using our specialized parallel editing engine.</li>
+          <li>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#infoModal" class="text-decoration-none fw-bold">
+              <i class="bi bi-info-circle-fill me-1"></i> How it works (Architecture)
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Demo Scenarios Header -->
     <div class="row mb-3">
+      <div class="col-12 text-center">
+        <h3 class="h5 mb-3">Start with a Scenario</h3>
+      </div>
       <div class="col-12">
-        <div class="d-flex justify-content-between align-items-center mb-2">
-          <h6 class="text-muted mb-0"><i class="bi bi-stars me-2"></i>Demo Scenarios</h6>
-          <small class="text-muted">Click a scenario to load its document</small>
-        </div>
-        <div class="row g-3" id="demo-cards-container">
-          <!-- Demo cards will be dynamically inserted here -->
+        <!-- Cards Container -->
+        <div class="row g-3 justify-content-center" id="demo-cards-container">
+          <!-- Demo cards will be dynamically inserted here by script.js -->
         </div>
       </div>
     </div>
 
+    <hr class="my-5 opacity-25">
+
+    <!-- Sample Prompts Section (Moved here) -->
+    <div class="row mb-4 justify-content-center">
+      <div class="col-lg-8">
+        <div id="sample-prompts-container" class="d-flex flex-wrap gap-2 justify-content-center">
+          <!-- Sample prompts will be dynamically inserted here -->
+        </div>
+      </div>
+    </div>
+
+    <!-- Editor Section -->
     <div class="row g-4">
       <div class="col-lg-7">
         <div class="card shadow-sm h-100">
           <div class="card-header d-flex justify-content-between align-items-center">
             <span class="fw-bold" id="document-title">Agreement.docx</span>
-            <div>
-              <button class="btn btn-sm btn-outline-secondary template-btn" data-template="MSA">MSA</button>
-              <button class="btn btn-sm btn-outline-secondary template-btn" data-template="NDA">NDA</button>
+            <div class="d-flex gap-2">
+              <div class="vr"></div>
+              <label for="file-upload" class="btn btn-sm btn-outline-primary mb-0" title="Upload PDF or Text file">
+                <i class="bi bi-upload"></i> Upload
+              </label>
+              <input type="file" id="file-upload" accept=".pdf,.txt,.md" style="display: none;">
             </div>
           </div>
           <div id="editor-container"></div>
@@ -234,15 +288,12 @@
               <div class="card-body">
                 <textarea id="custom-prompt" class="form-control mb-2" rows="2"
                   placeholder="e.g. Add a liability cap of $50k"></textarea>
-                <button id="btn-trigger" class="btn btn-primary btn-sm w-100 mb-2">
-                  <i class="bi bi-play-fill me-1"></i>Draft / Edit
-                </button>
-                <div id="ai-status" class="badge bg-secondary d-none mb-2">Thinking...</div>
-
-                <!-- Sample Prompts Section -->
-                <div id="sample-prompts-container" class="mt-3">
-                  <!-- Sample prompts will be dynamically inserted here -->
+                <div class="d-grid gap-2">
+                  <button id="btn-trigger" class="btn btn-primary btn-sm">
+                    <i class="bi bi-play-fill me-1"></i>Draft / Edit
+                  </button>
                 </div>
+                <div id="ai-status" class="badge bg-secondary d-none mt-2">Thinking...</div>
               </div>
             </div>
           </div>
@@ -298,7 +349,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Welcome to ContractAI</h5>
+          <h5 class="modal-title">Welcome to Parallel Editing</h5>
         </div>
         <div class="modal-body">
           <p class="mb-2">Enter your name to join the session:</p>
@@ -306,6 +357,78 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" id="btn-join">Join Session</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- INFO MODAL -->
+  <div class="modal fade" id="infoModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title fw-bold"><i class="bi bi-info-circle-fill me-2 text-primary"></i>How Parallel Edit
+            Works</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row g-4">
+            <div class="col-md-6">
+              <h6 class="fw-bold text-primary mb-3">1. Background Technology</h6>
+              <div class="d-flex mb-3">
+                <i class="bi bi-braces fs-4 me-3 text-secondary"></i>
+                <div>
+                  <strong>Y.js & CRDTs:</strong> The core is built on <a href="https://github.com/yjs/yjs"
+                    target="_blank">Y.js</a>, a high-performance CRDT library. This ensures that every keystroke is
+                  eventually consistent across all users without merge conflicts.
+                </div>
+              </div>
+              <div class="d-flex mb-3">
+                <i class="bi bi-broadcast fs-4 me-3 text-secondary"></i>
+                <div>
+                  <strong>WebRTC:</strong> We use <a href="https://github.com/yjs/y-webrtc" target="_blank">y-webrtc</a>
+                  for peer-to-peer data syncing. No central database stores your document state; it lives in the mesh of
+                  connected browsers.
+                </div>
+              </div>
+              <div class="d-flex">
+                <i class="bi bi-file-earmark-richtext fs-4 me-3 text-secondary"></i>
+                <div>
+                  <strong>Quill Editor:</strong> The editor is <a href="https://quilljs.com/" target="_blank">Quill</a>,
+                  bound to Y.js types. This allows rich text handling that multiple users (and bots) can edit
+                  simultaneously.
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <h6 class="fw-bold text-success mb-3">2. AI Architecture</h6>
+              <div class="d-flex mb-3">
+                <i class="bi bi-robot fs-4 me-3 text-secondary"></i>
+                <div>
+                  <strong>Agentic Workflow:</strong> When you request a change, a "Supervisor" agent plans the task and
+                  delegates sub-tasks to specialized agents (e.g., "Legal Verifier", "Drafter").
+                </div>
+              </div>
+              <div class="d-flex">
+                <i class="bi bi-pen fs-4 me-3 text-secondary"></i>
+                <div>
+                  <strong>Conflict-Free AI:</strong> Agents don't just "overwrite" text. They perform precise atomic
+                  operations on the shared Y.js document model. This treats the AI as just another user in the session,
+                  preventing it from accidentally deleting your work while you type.
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12">
+              <div class="alert alert-secondary mb-0 small">
+                <strong>Tech Stack:</strong> Vanilla JS (ES Modules), Bootstrap 5, Y.js, Quill, WebRTC, OpenAI/LLM API.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -319,8 +442,12 @@
         </div>
         <div class="modal-body">
           <label>API Key</label><input type="password" id="llm-api-key" class="form-control mb-2">
-          <label>Base URL</label><input type="text" id="llm-url" class="form-control"
+          <label>Base URL</label><input type="text" id="llm-url" class="form-control mb-2"
             placeholder="https://api.openai.com/v1">
+          <label>Model</label>
+          <select id="llm-model" class="form-select">
+            <!-- Options populated by JS -->
+          </select>
         </div>
         <div class="modal-footer"><button type="button" class="btn btn-primary" id="save-llm-config">Save</button></div>
       </div>
@@ -335,7 +462,8 @@
     "y-indexeddb": "https://esm.sh/y-indexeddb?external=yjs",
     "y-quill": "https://esm.sh/y-quill?external=yjs,quill",
     "quill": "https://esm.sh/quill@1.3.6",
-    "quill-cursors": "https://esm.sh/quill-cursors@2.2.1?external=quill"
+    "quill-cursors": "https://esm.sh/quill-cursors@2.2.1?external=quill",
+    "fast-diff": "https://esm.sh/fast-diff"
   }
 }
 </script>
